--- a/BDInfoWasm/index.html
+++ b/BDInfoWasm/index.html
@@ -14,6 +14,7 @@
 <body>
   <input type="file" id="filepicker" name="fileList" webkitdirectory directory multiple />
   <ul id="listing"></ul>
+  <pre id="filetree"></pre>
   <span id="out"></span>
   <script type='module' src="./main.js"></script>
 </body>
