show progress bar

--- a/BDInfoWasm/index.html
+++ b/BDInfoWasm/index.html
@@ -13,7 +13,8 @@
 
 <body>
   <input type="file" id="filepicker" name="fileList" webkitdirectory directory multiple />
-  <pre id="progress"></pre>
+  <div><progress id="progress" max="100" value="0"></progress></div>
+  <pre id="status"></pre>
   <pre id="errors"></pre>
   <ul id="listing"></ul>
   <pre id="filetree"></pre>
